@@ -12,10 +12,11 @@ noinst_HEADERS = utils.h SbigLocator.h SbigCamera.h SbigFilterWheel.h \
 pkglib_LTLIBRARIES = sbig.la 
 
 if USE_UDEV
-
+if ENABLE_NONROOT
+else
 udevdir = /etc/udev/rules.d
 udev_DATA = 80-sbig.rules
-
+endif
 endif
 
 if ENABLE_UNITTESTS
